fixed desktop header z-index

--- a/styles/desktop/Header.module.css
+++ b/styles/desktop/Header.module.css
@@ -11,7 +11,7 @@
   top: 0;
   width: 100%;
   transition: opacity 0.5s ease, transform 0.3s ease;
-  z-index: 10;
+  z-index: 9000;
 }
 .hidden {
   transform: translateY(-100%); /* Move header out of view */
